k8s/change-crawler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: change-crawler
  name: change-crawler
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: change-crawler
  template:
    metadata:
      labels:
        app: change-crawler
    spec:
      containers:
      - image: trainconnectionprediction/bahnvorhersage:stagging
        command: ["python3"]
        args: ["-m", "crawler.change"]
        imagePullPolicy: Always
        name: change-crawler
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - name: tz-berlin # set timezone to CEST
          mountPath: /etc/localtime
        - name: config
          mountPath: /usr/src/app/config.py
          subPath: config.py
        - name: cache-pvc-storage
          mountPath: /usr/src/app/cache
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: "config"
        configMap:
          name: "config"
      - name: cache-pvc-storage
        persistentVolumeClaim:
          claimName: cache-pvc
      - name: tz-berlin # set timezone to CEST
        hostPath:
          path: /usr/share/zoneinfo/Europe/Berlin
