k8s/next_webserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: next-webserver
  name: next-webserver
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: next-webserver
  template:
    metadata:
      labels:
        app: next-webserver
    spec:
      containers:
      - image: trainconnectionprediction/bahnvorhersage:stagging
        command: ["gunicorn"]
        args: ["-b 0.0.0.0:5000", "webserver:create_app()", "-t 800"]
        imagePullPolicy: Always
        name: tcp
        resources: {}
        volumeMounts:
        - name: tz-berlin # set timezone to CEST
          mountPath: /etc/localtime
        - name: config
          mountPath: /usr/src/app/config.py
          subPath: config.py
        - name: cache-pvc-storage
          mountPath: /usr/src/app/cache
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: "config"
        configMap:
          name: "config"
      - name: cache-pvc-storage
        persistentVolumeClaim:
          claimName: cache-pvc
      - name: tz-berlin  # set timezone to CEST
        hostPath:
          path: /usr/share/zoneinfo/Europe/Berlin
