k8s/db_rest.yaml
kind: Service
apiVersion: v1
metadata:
  name: db-rest-service
spec:
  selector:
    app: db-rest
  ports:
    - port: 3000 # Default port for image
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: db-rest
  name: db-rest
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: db-rest
  template:
    metadata:
      labels:
        app: db-rest
    spec:
      containers:
      - image: derhuerst/db-rest:6
        imagePullPolicy: Always
        name: db-rest
        resources: {}
        volumeMounts:
        - name: tz-berlin # set timezone to CEST
          mountPath: /etc/localtime
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: tz-berlin  # set timezone to CEST
        hostPath:
          path: /usr/share/zoneinfo/Europe/Berlin
