k8s/sfz-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: sfz-dashboard
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: sfz-dashboard
subsets:
- addresses:
  - ip: 192.168.178.24
  ports:
  - name: http
    port: 5555
    protocol: TCP
