k8s/sfz-deny-access.yaml
apiVersion: v1
kind: Service
metadata:
  name: sfz-deny-access
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: sfz-deny-access
subsets:
- addresses:
  - ip: 192.168.178.24
  ports:
  - name: http
    port: 29384
    protocol: TCP
