k8s/sfz-focalboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: sfz-focalboard
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: sfz-focalboard
subsets:
- addresses:
  - ip: 192.168.178.24
  ports:
  - name: http
    port: 8100
    protocol: TCP
