k8s/sfz-gitlab.yaml
apiVersion: v1
kind: Service
metadata:
  name: sfz-gitlab
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: sfz-gitlab
subsets:
- addresses:
  - ip: 192.168.178.24
  ports:
  - name: http
    port: 9080
    protocol: TCP
