k8s/sfz-podcast.yaml
apiVersion: v1
kind: Service
metadata:
  name: sfz-silentwave
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: sfz-silentwave
subsets:
- addresses:
  - ip: 192.168.178.24
  ports:
  - name: http
    port: 8060
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: sfz-podcast
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  clusterIP: None
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: sfz-podcast
subsets:
- addresses:
  - ip: 192.168.178.24
  ports:
  - name: http
    port: 8050
    protocol: TCP
