k8s/dashboard_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress-https
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/app-root: /status/sfz

spec:
  tls:
  - hosts:
    secretName: default-tls-secret
  rules:
  - host: "dashboard.sfz-eningen.de"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: sfz-dashboard
              port:
                number: 80
