k8s/ingress.yaml
kind: Service
apiVersion: v1
metadata:
  name: webserver-service
spec:
  selector:
    app: webserver
  ports:
    - port: 5000 # Default port for image
---
kind: Service
apiVersion: v1
metadata:
  name: next-webserver-service
spec:
  selector:
    app: next-webserver
  ports:
    - port: 5000 # Default port for image
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserver-ingress-https
  annotations:
    # Add the following line (staging first for testing, then apply the prod issuer)
    cert-manager.io/cluster-issuer: letsencrypt-prod # letsencrypt-staging
    acme.cert-manager.io/http01-edit-in-place: "true" # !!!This seems to be really important!!!

    ingress.kubernetes.io/ssl-redirect: "true"

    # Set gateway timeout to 5 minutes
    # for the NGINX's nginx-ingress 
    nginx.org/proxy-connect-timeout: 300s
    nginx.org/proxy-read-timeout: 300s
    nginx.org/proxy-send-timeout: 300s
    # for the default ingress-nginx
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"

spec:
  tls:
  - hosts:
    - bahnvorhersage.de
    - www.bahnvorhersage.de
    - next.bahnvorhersage.de
    - db-rest.bahnvorhersage.de
    - notes.bahnvorhersage.de
    - nextcloud.sfz-eningen.de
    - nextcloud.marcpanse.de
    - paralox-nextcloud.de
    - gitlab.sfz-eningen.de
    - gitlab.marcpanse.de
    - paralox-git.de
    - dashboard.sfz-eningen.de
    - overleaf.sfz-eningen.de
    - overleaf.marcpanse.de
    - focalboard.marcpanse.de
    - podcast-tech24.de
    - thesilentwave.de
    - dzconnect.de
    - beta.dzconnect.de
    - quicksharebox.de
    - wohnung-in-esslingen.de
    - endstationzukunft.de
    - validation.marcpanse.de
    - studywatch.de
    - holiday.unexcellent.com
    - plasticycle.de
    - justmyprojects.de
    secretName: default-tls-secret
  rules:
  - host: "bahnvorhersage.de"
    http: &prod_webserver
      paths:
        - path: /api/
          pathType: Prefix
          backend:
            service:
              name: webserver-service
              port:
                number: 5000
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 80
  - host: "www.bahnvorhersage.de"
    http: *prod_webserver
  - host: "next.bahnvorhersage.de"
    http: &test_webserver
      paths:
        - path: /api/
          pathType: Prefix
          backend:
            service:
              name: next-webserver-service
              port:
                number: 5000
        - path: /
          pathType: Prefix
          backend:
            service:
              name: next-frontend-service
              port:
                number: 80
  - host: "db-rest.bahnvorhersage.de"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: db-rest-service
              port:
                number: 3000
  - host: "notes.bahnvorhersage.de"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: hedgedoc
              port:
                number: 3000
  - host: "overleaf.marcpanse.de"
    http: &overleaf
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: sfz-overleaf
              port:
                number: 80
  - host: "overleaf.sfz-eningen.de"
    http: *overleaf

  - host: "gitlab.sfz-eningen.de"
    http: &gitlab
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: sfz-gitlab
              port:
                number: 80
  - host: "gitlab.marcpanse.de"
    http: *gitlab
  - host: "paralox-git.de"
    http: *gitlab
  - host: "focalboard.marcpanse.de"
    http: &focalboard
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: sfz-focalboard
              port:
                number: 80
        - path: /register
          pathType: Prefix
          backend:
            service:
              name: sfz-deny-access
              port:
                number: 80
  - host: "podcast-tech24.de"
    http: &podcast
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: sfz-podcast
              port:
                number: 80
  - host: "thesilentwave.de"
    http: &silentwave
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: sfz-silentwave
              port:
                number: 80
  - host: "dzconnect.de"
    http: &dzconnect
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: sfz-dzconnect
              port:
                number: 80
  - host: "beta.dzconnect.de"
    http: &dzconnect-beta
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: sfz-dzconnect-beta
              port:
                number: 80
  - host: "wohnung-in-esslingen.de"
    http: &wohnung-in-esslingen
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: sfz-wohnung-in-esslingen
              port:
                number: 80
  - host: "endstationzukunft.de"
    http: &endstationzukunft
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: sfz-endstationzukunft
              port:
                number: 80
  - host: "validation.marcpanse.de"
    http: &validation
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: sfz-validation
              port:
                number: 80
  - host: "studywatch.de"
    http: &studywatch
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: sfz-studywatch
              port:
                number: 80
  - host: "holiday.unexcellent.com"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: holiday-challenge-service
              port:
                number: 3000
  - host: "plasticycle.de"
    http: &plasticycle
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: sfz-plasticycle
              port:
                number: 80
  - host: "justmyprojects.de"
    http: &justmyprojects
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: sfz-justmyprojects
              port:
                number: 80
